# cmake-objlib-poc

./: CMakeLists.txt
example/: CMakeLists.txt  ex01.cpp
include/lib/: x.hpp
libs/: CMakeLists.txt
libs/a/: CMakeLists.txt
libs/a/include/a/: a.hpp
libs/a/src/: a.cpp
libs/b/: CMakeLists.txt
libs/b/include/b/: b.hpp
libs/b/src/: b.cpp
src/: x.cpp
